packages/parser/test/parser/E0107-parenthesized-expression.txt
a := (
===== err =====
anonymous:1:7: ParseError: E0107 - Expected expression after left parenthesis
1 | a := (
  |       ^

anonymous:1:7: ParseError: E0103 - Expected closing parenthesis after parenthesized expression
1 | a := (
  |       ^
